# jdms

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  params.json
scripts/: run-app
source/: CMakeLists.txt  main.cpp
source/gui/: Gui.cpp  Gui.hpp  GuiApplication.cpp  GuiApplication.hpp  MainWidget.cpp  MainWidget.hpp
test/: CMakeLists.txt
test/gui/: CMakeLists.txt  testMainWidget.cpp
tools/docker/base/: Dockerfile
tools/docker/dev/: Dockerfile  docker-entrypoint.sh
tools/resources/emacs.d/elpa/: yasnippet-0.13.0.signed
tools/resources/emacs.d/elpa/archives/gnu/: archive-contents.signed
tools/resources/emacs.d/elpa/archives/melpa-stable/: archive-contents
tools/resources/emacs.d/elpa/flycheck-31/: flycheck-ert.elc
tools/resources/emacs.d/elpa/gnupg/: pubring.kbx  pubring.kbx~  trustdb.gpg
tools/resources/emacs.d/elpa/lsp-mode-6.0/: lsp-mode.elc
tools/resources/emacs.d/lisp/: .emacs
tools/scripts/: jdms-project.py  jdms_docker.py
